corrected overflow errors in css

--- a/public/index.css
+++ b/public/index.css
@@ -50,10 +50,16 @@ p, span, div, section {
 }
 .front-list {
   text-align: center;
+  overflow: scroll;
+  position: absolute;
+  top: 300px;
+  bottom: 0;
+  left: 75px;
+  right: 0;
 }
 .front-item{
   padding: 10px;
-  width: 600px;
+  width: 550px;
   text-align: left;
 }
 .front-wrapper {
@@ -159,6 +165,12 @@ p, span, div, section {
   padding: 15px 0;
 }
 .task-list {
+  position: absolute;
+  top: 60px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: scroll;
 }
 .task-item {
   padding: 15px;
